manifests/B/admission.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: kyverno-resource-validating-webhook-cfg
  labels:
    webhook.kyverno.io/managed-by: kyverno
webhooks:
- name: validate.kyverno.svc-fail
  clientConfig:
    url: https://kyverno.webhook.com/app-ns/app-cluster/validate
    caBundle: >-
      LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURQVENDQWlXZ0F3SUJBZ0lVZUt2aE4xaE00S0N6TVBmSXR2WUp4Z3lyUitvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0hqRWNNQm9HQTFVRUF3d1RhM2wyWlhKdWJ5NTNaV0pvYjI5ckxtTnZiVEFlRncweU5qQTBNVFV3TVRNegpNVEZhRncweU56QTBNVFV3TVRNek1URmFNQjR4SERBYUJnTlZCQU1NRTJ0NWRtVnlibTh1ZDJWaWFHOXZheTVqCmIyMHdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFET0tVazRKM1ZXRGlWYzM4emEKUUFoMFlvUUZvcWpndjlieVJsVjlUZ2h0QnFxd3BKMW1qa2gwN0ZZcjZ0RnNvTEVQYnY4b3dDYURZSmdUZ01XMApDY0oxQXBkazVmdlkyeVJtRG [...]
  rules:
  - operations:
    - CONNECT
    - CREATE
    - DELETE
    - UPDATE
    apiGroups:
    - ""
    apiVersions:
    - v1
    resources:
    - pods
    - pods/ephemeralcontainers
    - replicationcontrollers
    scope: Namespaced
  - operations:
    - CONNECT
    - CREATE
    - DELETE
    - UPDATE
    apiGroups:
    - apps
    apiVersions:
    - v1
    resources:
    - daemonsets
    - deployments
    - replicasets
    - statefulsets
    scope: Namespaced
  - operations:
    - CONNECT
    - CREATE
    - DELETE
    - UPDATE
    apiGroups:
    - batch
    apiVersions:
    - v1
    resources:
    - cronjobs
    - jobs
    scope: Namespaced
  failurePolicy: Fail
  matchPolicy: Equivalent
  namespaceSelector:
    matchExpressions:
    - key: kubernetes.io/metadata.name
      operator: NotIn
      values:
      - kube-system
    - key: kubernetes.io/metadata.name
      operator: NotIn
      values:
      - app-ns
  objectSelector: {}
  sideEffects: NoneOnDryRun
  timeoutSeconds: 30
  admissionReviewVersions:
  - v1
